# cmake_meta

./: LICENSE  README.md  check_cxx_compiler.cmake  meta_conan.cmake
.github/workflows/: cmake.yml
test/: CMakeLists.txt  test.c  test.cc
toolchains/: x86-64-linux-lvm.toolchain.cmake  x86-64-windows-msvc.toolchain.cmake  x86-64_linux-gcc.cmake
